src/y.output
Grammar

    0 $accept: Program $end

    1 Program: ProgramElementList

    2 ProgramElementList: ProgramElement ProgramElementList
    3                   | ε

    4 NUM: UNUM
    5    | SUB UNUM

    6 Type: INT
    7     | ID

    8 RightValList: RightVal
    9             | RightVal COMMA RightValList

   10 FnCall: ID LP RightValList RP
   11       | ID LP RP

   12 ArrayExpr: ID LSB NUM RSB
   13          | ID LSB ID RSB
   14          | LeftVal LSB NUM RSB
   15          | LeftVal LSB ID RSB

   16 MemberExpr: ID DOT ID
   17           | LeftVal DOT ID

   18 ExprUnit: NUM
   19         | ID
   20         | LP ArithExpr RP
   21         | FnCall
   22         | ArrayExpr
   23         | MemberExpr

   24 ArithExpr: ArithExpr ADD ArithExpr
   25          | ArithExpr SUB ArithExpr
   26          | ArithExpr MUL ArithExpr
   27          | ArithExpr DIV ArithExpr
   28          | ExprUnit

   29 BoolUOpExpr: NOT BoolUnit

   30 BoolBiOpExpr: BoolExpr AND BoolExpr
   31             | BoolExpr OR BoolExpr

   32 BoolExpr: BoolBiOpExpr
   33         | BoolUnit

   34 ComExpr: ExprUnit LT ExprUnit
   35        | ExprUnit LE ExprUnit
   36        | ExprUnit GT ExprUnit
   37        | ExprUnit GE ExprUnit
   38        | ExprUnit EQ ExprUnit
   39        | ExprUnit NE ExprUnit

   40 BoolUnit: LP ComExpr RP
   41         | LP BoolExpr RP
   42         | BoolUOpExpr

   43 BoolUnit_: LP ComExpr RP
   44          | LP BoolExpr RP
   45          | LP BoolUOpExpr RP

   46 RightVal: ArithExpr

   47 LeftVal: ID
   48        | ArrayExpr
   49        | MemberExpr

   50 AssignStmt: LeftVal ASSIGN RightVal SEMICOLON

   51 VarDecl: ID COLON Type
   52        | ArrayExpr COLON Type
   53        | ArrayExpr
   54        | ID

   55 VarDef: ID COLON Type ASSIGN RightVal
   56       | ID ASSIGN RightVal
   57       | ArrayExpr COLON Type ASSIGN LB RightValList RB
   58       | ArrayExpr ASSIGN LB RightValList RB
   59       | ArrayExpr COLON Type ASSIGN LB RB
   60       | ArrayExpr ASSIGN LB RB

   61 VarDeclStmt: LET VarDecl SEMICOLON
   62            | LET VarDef SEMICOLON

   63 VarDeclList: VarDecl
   64            | VarDecl COMMA VarDeclList

   65 StructDef: STRUCT ID LB VarDeclList RB

   66 FnDecl: FN ID LP ParamDecl RP
   67       | FN ID LP ParamDecl RP ARROW Type

   68 ParamDecl: VarDeclList
   69          | ε

   70 CodeBlockStmtList: CodeBlockStmt CodeBlockStmtList
   71                  | CodeBlockStmt

   72 FnDef: FnDecl CodeBlock

   73 IfStmt: IF BoolUnit_ CodeBlock ELSE CodeBlock
   74       | IF BoolUnit_ CodeBlock

   75 WhileStmt: WHILE BoolUnit_ CodeBlock

   76 CallStmt: FnCall SEMICOLON

   77 ReturnStmt: RETURN RightVal SEMICOLON
   78           | RETURN SEMICOLON

   79 ContinueStmt: CONTINUE SEMICOLON

   80 BreakStmt: BREAK SEMICOLON

   81 CodeBlockStmt: SEMICOLON
   82              | VarDeclStmt
   83              | AssignStmt
   84              | CallStmt
   85              | IfStmt
   86              | WhileStmt
   87              | ReturnStmt
   88              | ContinueStmt
   89              | BreakStmt

   90 CodeBlock: LB RB
   91          | LB CodeBlockStmtList RB

   92 FnDeclStmt: FnDecl SEMICOLON

   93 ProgramElement: VarDeclStmt
   94               | StructDef
   95               | FnDeclStmt
   96               | FnDef
   97               | SEMICOLON


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    ADD <pos> (258) 24
    SUB <pos> (259) 5 25
    MUL <pos> (260) 26
    DIV <pos> (261) 27
    LP <pos> (262) 10 11 20 40 41 43 44 45 66 67
    RP <pos> (263) 10 11 20 40 41 43 44 45 66 67
    LSB <pos> (264) 12 13 14 15
    RSB <pos> (265) 12 13 14 15
    LB <pos> (266) 57 58 59 60 65 90 91
    RB <pos> (267) 57 58 59 60 65 90 91
    COMMA <pos> (268) 9 64
    SEMICOLON <pos> (269) 50 61 62 76 77 78 79 80 81 92 97
    EQ <pos> (270) 38
    NE <pos> (271) 39
    LT <pos> (272) 34
    GT <pos> (273) 36
    LE <pos> (274) 35
    GE <pos> (275) 37
    ASSIGN <pos> (276) 50 55 56 57 58 59 60
    AND <pos> (277) 30
    OR <pos> (278) 31
    NOT <pos> (279) 29
    ARROW <pos> (280) 67
    DOT <pos> (281) 16 17
    COLON <pos> (282) 51 52 55 57 59
    IF <pos> (283) 73 74
    ELSE <pos> (284) 73
    WHILE <pos> (285) 75
    RETURN <pos> (286) 77 78
    CONTINUE <pos> (287) 79
    BREAK <pos> (288) 80
    INT <pos> (289) 6
    FN <pos> (290) 66 67
    LET <pos> (291) 61 62
    STRUCT <pos> (292) 65
    UNUM <tokenNum> (293) 4 5
    ID <tokenId> (294) 7 10 11 12 13 15 16 17 19 47 51 54 55 56 65 66 67
    NEG (295)
    LOWER_THAN_LP (296)


Nonterminals, with rules where they appear

    $accept (42)
        on left: 0
    Program <program> (43)
        on left: 1
        on right: 0
    ProgramElementList <programElementList> (44)
        on left: 2 3
        on right: 1 2
    NUM <tokenNum> (45)
        on left: 4 5
        on right: 12 14 18
    Type <type> (46)
        on left: 6 7
        on right: 51 52 55 57 59 67
    RightValList <rightValList> (47)
        on left: 8 9
        on right: 9 10 57 58
    FnCall <fnCall> (48)
        on left: 10 11
        on right: 21 76
    ArrayExpr <arrayExpr> (49)
        on left: 12 13 14 15
        on right: 22 48 52 53 57 58 59 60
    MemberExpr <memberExpr> (50)
        on left: 16 17
        on right: 23 49
    ExprUnit <exprUnit> (51)
        on left: 18 19 20 21 22 23
        on right: 28 34 35 36 37 38 39
    ArithExpr <arithExpr> (52)
        on left: 24 25 26 27 28
        on right: 20 24 25 26 27 46
    BoolUOpExpr <boolUOpExpr> (53)
        on left: 29
        on right: 42 45
    BoolBiOpExpr <boolBiOpExpr> (54)
        on left: 30 31
        on right: 32
    BoolExpr <boolExpr> (55)
        on left: 32 33
        on right: 30 31 41 44
    ComExpr <comExpr> (56)
        on left: 34 35 36 37 38 39
        on right: 40 43
    BoolUnit <boolUnit> (57)
        on left: 40 41 42
        on right: 29 33
    BoolUnit_ <boolUnit> (58)
        on left: 43 44 45
        on right: 73 74 75
    RightVal <rightVal> (59)
        on left: 46
        on right: 8 9 50 55 56 77
    LeftVal <leftVal> (60)
        on left: 47 48 49
        on right: 14 15 17 50
    AssignStmt <assignStmt> (61)
        on left: 50
        on right: 83
    VarDecl <varDecl> (62)
        on left: 51 52 53 54
        on right: 61 63 64
    VarDef <varDef> (63)
        on left: 55 56 57 58 59 60
        on right: 62
    VarDeclStmt <varDeclStmt> (64)
        on left: 61 62
        on right: 82 93
    VarDeclList <varDeclList> (65)
        on left: 63 64
        on right: 64 65 68
    StructDef <structDef> (66)
        on left: 65
        on right: 94
    FnDecl <fnDecl> (67)
        on left: 66 67
        on right: 72 92
    ParamDecl <paramDecl> (68)
        on left: 68 69
        on right: 66 67
    CodeBlockStmtList <codeBlockStmtList> (69)
        on left: 70 71
        on right: 70 91
    FnDef <fnDef> (70)
        on left: 72
        on right: 96
    IfStmt <ifStmt> (71)
        on left: 73 74
        on right: 85
    WhileStmt <whileStmt> (72)
        on left: 75
        on right: 86
    CallStmt <callStmt> (73)
        on left: 76
        on right: 84
    ReturnStmt <returnStmt> (74)
        on left: 77 78
        on right: 87
    ContinueStmt <pos> (75)
        on left: 79
        on right: 88
    BreakStmt <pos> (76)
        on left: 80
        on right: 89
    CodeBlockStmt <codeBlockStmt> (77)
        on left: 81 82 83 84 85 86 87 88 89
        on right: 70 71
    CodeBlock <codeBlockStmtList> (78)
        on left: 90 91
        on right: 72 73 74 75
    FnDeclStmt <fnDeclStmt> (79)
        on left: 92
        on right: 95
    ProgramElement <programElement> (80)
        on left: 93 94 95 96 97
        on right: 2


State 0

    0 $accept: • Program $end

    SEMICOLON  shift, and go to state 1
    FN         shift, and go to state 2
    LET        shift, and go to state 3
    STRUCT     shift, and go to state 4

    $default  reduce using rule 3 (ProgramElementList)

    Program             go to state 5
    ProgramElementList  go to state 6
    VarDeclStmt         go to state 7
    StructDef           go to state 8
    FnDecl              go to state 9
    FnDef               go to state 10
    FnDeclStmt          go to state 11
    ProgramElement      go to state 12


State 1

   97 ProgramElement: SEMICOLON •

    $default  reduce using rule 97 (ProgramElement)


State 2

   66 FnDecl: FN • ID LP ParamDecl RP
   67       | FN • ID LP ParamDecl RP ARROW Type

    ID  shift, and go to state 13


State 3

   61 VarDeclStmt: LET • VarDecl SEMICOLON
   62            | LET • VarDef SEMICOLON

    ID  shift, and go to state 14

    ArrayExpr   go to state 15
    MemberExpr  go to state 16
    LeftVal     go to state 17
    VarDecl     go to state 18
    VarDef      go to state 19


State 4

   65 StructDef: STRUCT • ID LB VarDeclList RB

    ID  shift, and go to state 20


State 5

    0 $accept: Program • $end

    $end  shift, and go to state 21


State 6

    1 Program: ProgramElementList •

    $default  reduce using rule 1 (Program)


State 7

   93 ProgramElement: VarDeclStmt •

    $default  reduce using rule 93 (ProgramElement)


State 8

   94 ProgramElement: StructDef •

    $default  reduce using rule 94 (ProgramElement)


State 9

   72 FnDef: FnDecl • CodeBlock
   92 FnDeclStmt: FnDecl • SEMICOLON

    LB         shift, and go to state 22
    SEMICOLON  shift, and go to state 23

    CodeBlock  go to state 24


State 10

   96 ProgramElement: FnDef •

    $default  reduce using rule 96 (ProgramElement)


State 11

   95 ProgramElement: FnDeclStmt •

    $default  reduce using rule 95 (ProgramElement)


State 12

    2 ProgramElementList: ProgramElement • ProgramElementList

    SEMICOLON  shift, and go to state 1
    FN         shift, and go to state 2
    LET        shift, and go to state 3
    STRUCT     shift, and go to state 4

    $default  reduce using rule 3 (ProgramElementList)

    ProgramElementList  go to state 25
    VarDeclStmt         go to state 7
    StructDef           go to state 8
    FnDecl              go to state 9
    FnDef               go to state 10
    FnDeclStmt          go to state 11
    ProgramElement      go to state 12


State 13

   66 FnDecl: FN ID • LP ParamDecl RP
   67       | FN ID • LP ParamDecl RP ARROW Type

    LP  shift, and go to state 26


State 14

   12 ArrayExpr: ID • LSB NUM RSB
   13          | ID • LSB ID RSB
   16 MemberExpr: ID • DOT ID
   47 LeftVal: ID •
   51 VarDecl: ID • COLON Type
   54        | ID •
   55 VarDef: ID • COLON Type ASSIGN RightVal
   56       | ID • ASSIGN RightVal

    LSB     shift, and go to state 27
    ASSIGN  shift, and go to state 28
    DOT     shift, and go to state 29
    COLON   shift, and go to state 30

    $default  reduce using rule 54 (VarDecl)


State 15

   48 LeftVal: ArrayExpr •
   52 VarDecl: ArrayExpr • COLON Type
   53        | ArrayExpr •
   57 VarDef: ArrayExpr • COLON Type ASSIGN LB RightValList RB
   58       | ArrayExpr • ASSIGN LB RightValList RB
   59       | ArrayExpr • COLON Type ASSIGN LB RB
   60       | ArrayExpr • ASSIGN LB RB

    ASSIGN  shift, and go to state 31
    COLON   shift, and go to state 32

    SEMICOLON  reduce using rule 53 (VarDecl)
    $default   reduce using rule 48 (LeftVal)


State 16

   49 LeftVal: MemberExpr •

    $default  reduce using rule 49 (LeftVal)


State 17

   14 ArrayExpr: LeftVal • LSB NUM RSB
   15          | LeftVal • LSB ID RSB
   17 MemberExpr: LeftVal • DOT ID

    LSB  shift, and go to state 33
    DOT  shift, and go to state 34


State 18

   61 VarDeclStmt: LET VarDecl • SEMICOLON

    SEMICOLON  shift, and go to state 35


State 19

   62 VarDeclStmt: LET VarDef • SEMICOLON

    SEMICOLON  shift, and go to state 36


State 20

   65 StructDef: STRUCT ID • LB VarDeclList RB

    LB  shift, and go to state 37


State 21

    0 $accept: Program $end •

    $default  accept


State 22

   90 CodeBlock: LB • RB
   91          | LB • CodeBlockStmtList RB

    RB         shift, and go to state 38
    SEMICOLON  shift, and go to state 39
    IF         shift, and go to state 40
    WHILE      shift, and go to state 41
    RETURN     shift, and go to state 42
    CONTINUE   shift, and go to state 43
    BREAK      shift, and go to state 44
    LET        shift, and go to state 3
    ID         shift, and go to state 45

    FnCall             go to state 46
    ArrayExpr          go to state 47
    MemberExpr         go to state 16
    LeftVal            go to state 48
    AssignStmt         go to state 49
    VarDeclStmt        go to state 50
    CodeBlockStmtList  go to state 51
    IfStmt             go to state 52
    WhileStmt          go to state 53
    CallStmt           go to state 54
    ReturnStmt         go to state 55
    ContinueStmt       go to state 56
    BreakStmt          go to state 57
    CodeBlockStmt      go to state 58


State 23

   92 FnDeclStmt: FnDecl SEMICOLON •

    $default  reduce using rule 92 (FnDeclStmt)


State 24

   72 FnDef: FnDecl CodeBlock •

    $default  reduce using rule 72 (FnDef)


State 25

    2 ProgramElementList: ProgramElement ProgramElementList •

    $default  reduce using rule 2 (ProgramElementList)


State 26

   66 FnDecl: FN ID LP • ParamDecl RP
   67       | FN ID LP • ParamDecl RP ARROW Type

    ID  shift, and go to state 59

    $default  reduce using rule 69 (ParamDecl)

    ArrayExpr    go to state 60
    MemberExpr   go to state 16
    LeftVal      go to state 17
    VarDecl      go to state 61
    VarDeclList  go to state 62
    ParamDecl    go to state 63


State 27

   12 ArrayExpr: ID LSB • NUM RSB
   13          | ID LSB • ID RSB

    SUB   shift, and go to state 64
    UNUM  shift, and go to state 65
    ID    shift, and go to state 66

    NUM  go to state 67


State 28

   56 VarDef: ID ASSIGN • RightVal

    SUB   shift, and go to state 64
    LP    shift, and go to state 68
    UNUM  shift, and go to state 65
    ID    shift, and go to state 69

    NUM         go to state 70
    FnCall      go to state 71
    ArrayExpr   go to state 72
    MemberExpr  go to state 73
    ExprUnit    go to state 74
    ArithExpr   go to state 75
    RightVal    go to state 76
    LeftVal     go to state 17


State 29

   16 MemberExpr: ID DOT • ID

    ID  shift, and go to state 77


State 30

   51 VarDecl: ID COLON • Type
   55 VarDef: ID COLON • Type ASSIGN RightVal

    INT  shift, and go to state 78
    ID   shift, and go to state 79

    Type  go to state 80


State 31

   58 VarDef: ArrayExpr ASSIGN • LB RightValList RB
   60       | ArrayExpr ASSIGN • LB RB

    LB  shift, and go to state 81


State 32

   52 VarDecl: ArrayExpr COLON • Type
   57 VarDef: ArrayExpr COLON • Type ASSIGN LB RightValList RB
   59       | ArrayExpr COLON • Type ASSIGN LB RB

    INT  shift, and go to state 78
    ID   shift, and go to state 79

    Type  go to state 82


State 33

   14 ArrayExpr: LeftVal LSB • NUM RSB
   15          | LeftVal LSB • ID RSB

    SUB   shift, and go to state 64
    UNUM  shift, and go to state 65
    ID    shift, and go to state 83

    NUM  go to state 84


State 34

   17 MemberExpr: LeftVal DOT • ID

    ID  shift, and go to state 85


State 35

   61 VarDeclStmt: LET VarDecl SEMICOLON •

    $default  reduce using rule 61 (VarDeclStmt)


State 36

   62 VarDeclStmt: LET VarDef SEMICOLON •

    $default  reduce using rule 62 (VarDeclStmt)


State 37

   65 StructDef: STRUCT ID LB • VarDeclList RB

    ID  shift, and go to state 59

    ArrayExpr    go to state 60
    MemberExpr   go to state 16
    LeftVal      go to state 17
    VarDecl      go to state 61
    VarDeclList  go to state 86


State 38

   90 CodeBlock: LB RB •

    $default  reduce using rule 90 (CodeBlock)


State 39

   81 CodeBlockStmt: SEMICOLON •

    $default  reduce using rule 81 (CodeBlockStmt)


State 40

   73 IfStmt: IF • BoolUnit_ CodeBlock ELSE CodeBlock
   74       | IF • BoolUnit_ CodeBlock

    LP  shift, and go to state 87

    BoolUnit_  go to state 88


State 41

   75 WhileStmt: WHILE • BoolUnit_ CodeBlock

    LP  shift, and go to state 87

    BoolUnit_  go to state 89


State 42

   77 ReturnStmt: RETURN • RightVal SEMICOLON
   78           | RETURN • SEMICOLON

    SUB        shift, and go to state 64
    LP         shift, and go to state 68
    SEMICOLON  shift, and go to state 90
    UNUM       shift, and go to state 65
    ID         shift, and go to state 69

    NUM         go to state 70
    FnCall      go to state 71
    ArrayExpr   go to state 72
    MemberExpr  go to state 73
    ExprUnit    go to state 74
    ArithExpr   go to state 75
    RightVal    go to state 91
    LeftVal     go to state 17


State 43

   79 ContinueStmt: CONTINUE • SEMICOLON

    SEMICOLON  shift, and go to state 92


State 44

   80 BreakStmt: BREAK • SEMICOLON

    SEMICOLON  shift, and go to state 93


State 45

   10 FnCall: ID • LP RightValList RP
   11       | ID • LP RP
   12 ArrayExpr: ID • LSB NUM RSB
   13          | ID • LSB ID RSB
   16 MemberExpr: ID • DOT ID
   47 LeftVal: ID •

    LP   shift, and go to state 94
    LSB  shift, and go to state 27
    DOT  shift, and go to state 29

    $default  reduce using rule 47 (LeftVal)
